# firmata-board

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  NOTICE  README.md  justfile
docs/: architecture.md  exploring-firmata-board.md
examples/: analog.rs  available.rs  blink.rs  blinkm_i2c.rs  button.rs  pwm.rs  servo.rs
examples/support/: common.rs
src/: error.rs  lib.rs
src/board/: handshake.rs  mod.rs  retry.rs  state.rs
src/board/profiles/: mod.rs  uno.rs
src/pin/: mod.rs
src/protocol/: constants.rs  decode.rs  encode.rs  mod.rs  sysex.rs  types.rs
src/transport/: mock.rs  mod.rs  serial.rs
